@startuml diagramme-13
title Diagramme d'états : frais de scolarité
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam ArrowColor #0B1E3D
skinparam roundcorner 8
skinparam stateBackgroundColor #F7F9FC
skinparam stateBorderColor #0B1E3D
state "Dû" as Du
state "Partiel" as Partiel
state "Soldé" as Solde
state "Impayé" as Impaye
[*] --> Du : frais défini pour l'élève
Du --> Partiel : paiement partiel
Du --> Solde : paiement du total
Partiel --> Partiel : nouveau paiement partiel
Partiel --> Solde : reste réglé
Du --> Impaye : échéance dépassée\n(vérification quotidienne)
Partiel --> Impaye : échéance dépassée
Impaye --> Partiel : paiement partiel
Impaye --> Solde : paiement du reste
Solde --> [*]
@enduml
